NLP TP's/texts/robotics/robotics.stackexchange_0000027944.txt
Q:

ARIAC Installation Instructions

Hello! I'm trying to install the ARIAC simulator on ROS Kinetic + Gazebo 7 + Ubuntu 16.04, both installed from apt. The installation instructions suggest binaries, but I didn't see any indication of where to obtain them, so I attempted to compile from source. I ran into a protobuf conflict between the protobuf version used to compile the Gazebo 7 apt package and the version required for tensorflow, and tried recompiling the Gazebo protobuf to match. Unfortunately, I think that introduced more problems:
[ 73%] Building CXX object ariac/gear_example/CMakeFiles/gear_example_node.dir/src/gear_example_node.cpp.o
In file included from /usr/include/gazebo-7/gazebo/physics/Link.hh:42:0,
                 from /home/rstory/Repositories/catkin_ws/src/ariac/osrf_gear/src/PopulationPlugin.cc:28:
/usr/include/gazebo-7/gazebo/physics/Entity.hh:277:31: error: ‘ConstPosePtr’ has not been declared
       private: void OnPoseMsg(ConstPosePtr &_msg);
                               ^
In file included from /usr/include/gazebo-7/gazebo/physics/Collision.hh:33:0,
                 from /home/rstory/Repositories/catkin_ws/src/ariac/osrf_gear/src/VacuumGripperPlugin.cc:29:
/usr/include/gazebo-7/gazebo/physics/Entity.hh:277:31: error: ‘ConstPosePtr’ has not been declared
       private: void OnPoseMsg(ConstPosePtr &_msg);
                               ^
In file included from /usr/include/gazebo-7/gazebo/physics/Model.hh:34:0,
                 from /usr/include/gazebo-7/gazebo/physics/Actor.hh:24,
                 from /usr/include/gazebo-7/gazebo/physics/physics.hh:2,
                 from /home/rstory/Repositories/catkin_ws/src/ariac/osrf_gear/src/ProximityRayPlugin.cc:21:
/usr/include/gazebo-7/gazebo/physics/Entity.hh:277:31: error: ‘ConstPosePtr’ has not been declared
       private: void OnPoseMsg(ConstPosePtr &_msg);

I assume that if I want to use a version of protobuf that supports tensorflow I'll have to recompile Gazebo from source. Does Gazebo support Protobuf 3.0?
Better still would be instructions on how to obtain to ARIAC binaries so I didn't have to try to sort out the protobuf mismatch.
Thanks

Originally posted by RandomWord on Gazebo Answers with karma: 33 on 2016-11-02
Post score: 1

A:

I have updated the ARIAC tutorials including the command for installing the ariac package.
Gazebo 7 supports protobuf3, but you would have to recompile it from source.
An alternative solution would be to create a docker container for having two separate isolated environments. You then choose where to run what :)

Originally posted by Carlos Agüero with karma: 626 on 2016-11-04
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by RandomWord on 2016-11-04:
Thank you very much. I switched to protobuf 2.6 for building ARIAC and put tensorflow inside nvidia-docker and everything worked just fine.
Comment by Carlos Agüero on 2016-11-04:
That was fast!

